<resources>
    <string name="app_name">YMCbox</string>
    <string name="info">总览</string>
    <string name="nickname">昵称：</string>
    <string name="nullpoint">无</string>
    <string name="installedversion">已装版本：</string>
    <string name="start">启动</string>
    <string name="download">下载</string>
    <string name="wiki">wiki</string>
    <string name="main">首页</string>
    <string name="resmanage">资源管理</string>
    <string name="resmanage_hint">快捷管理Minecraft存档、行为包等资源</string>
    <string name="restool_hint">皮肤获取、像素画等资源工具</string>
    <string name="restools">资源工具</string>
    <string name="servertool">服务器工具</string>
    <string name="servertool_hint">服务器信息获取、测速、开服帮助等工具</string>
    <string name="menu_home">首页</string>
    <string name="menu_discover">发现</string>
    <string name="menu_mine">个人</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">外部储存目录</string>

    <!-- Sync Preferences -->
    <string name="sync_title">自动登录</string>
    <string name="attachment_title">自动检查更新</string>
    <string name="attachment_summary_on">启动软件时自动检查是否为最新版本
    </string>
    <string name="attachment_summary_off">启动软件时自动检查是否为最新版本</string>
    <string name="path_header">路径设置</string>
    <string name="package_name">Minecraft包名</string>
    <string name="newpath">Android/data/包名/files/games/com.mojang（1.8以上版本）</string>
    <string name="newgamepath">Android/data/包名/files/games/com.mojang（1.8以上版本）</string>
    <string name="isrunning">运行状态：</string>
    <string name="stop">停止</string>
    <string name="map">存档</string>
    <string name="addon">行为包</string>
    <string name="res">资源包</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <string name="changeicon">更换头图</string>
    <string name="pack">打包资源</string>
    <string name="change">更换</string>
    <string name="changename">更改名称</string>
    <string name="deleteres">删除资源</string>
</resources>