<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/path_header">

        <EditTextPreference
            android:defaultValue="com.mojang.minecraftpe"
            android:key="packagename"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/package_name"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="path"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:defaultValue="true"
            app:key="autologin"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:defaultValue="true"
            app:key="autoupdate"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>