<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ResManager.MapActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_back"
        app:subtitle="@string/about"
        app:title="@string/res" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:baselineAligned="false" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="TODO"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="@string/change" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/img"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_edit"
                    android:text="@string/changename" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_receipt_light"
                    android:text="@string/pack" />

                <Button
                    android:id="@+id/button4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_delete_light"
                    android:text="@string/deleteres" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>