<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Main.MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                <TextView
                    android:id="@+id/version_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/info"
                    android:text="@string/installedversion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/version_title"
                    android:layout_toEndOf="@id/version_title"
                    android:layout_toRightOf="@id/version_title"
                    android:text="@string/nullpoint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/isrunning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/version_title"
                    android:text="@string/isrunning"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/isrunning"
                    android:layout_toEndOf="@id/isrunning"
                    android:layout_toRightOf="@id/isrunning"
                    android:text="@string/stop"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/start"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/download"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@id/start"
                    android:layout_toRightOf="@id/start"
                    android:text="@string/download" />

                <Button
                    android:id="@+id/wiki"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@id/download"
                    android:layout_toRightOf="@id/download"
                    android:text="@string/wiki" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/resmanage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="#ffffff"
                        android:src="@drawable/ic_right" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/resmanager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resmanage"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/resmanage_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/restool"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="#ffffff"
                        android:src="@drawable/ic_right" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/restools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restools"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/restool_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/servertools"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="#ffffff"
                        android:src="@drawable/ic_right" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/servertool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/servertool"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="@string/servertool_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

